--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --respawn --transpileOnly src/index.ts",
+    "start": "ts-node src/index.ts",
+    "serve": "ts-node-dev --respawn --transpileOnly src/index.ts",
     "debug": "cross-env TZ=UTC NODE_ENV=development tsnd --inspect --respawn src/index.ts",
     "knex:migrate:make": "knex --knexfile src/database/knexfile.ts -x ts migrate:make",
     "knex:migrate:latest": "knex --knexfile src/database/knexfile.ts migrate:latest",
@@ -18,7 +19,8 @@
     "express": "^4.17.1",
     "knex": "^0.20.13",
     "mysql": "^2.18.1",
-    "sqlite3": "^4.1.1"
+    "sqlite3": "^4.1.1",
+    "ts-node": "^8.8.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
