--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "knex": "^0.20.13",
     "mysql": "^2.18.1",
     "sqlite3": "^4.1.1",
-    "ts-node": "^8.8.1"
+    "ts-node": "^8.8.1",
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
